| Summary: | ASTERISK-20383: Add missing named call pickup group features for parity with numeric call pickup groups. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2012-09-07 11:40:31 | Date Closed: | 2012-09-20 12:16:27 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_directed_pickup Functions/func_channel |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Missing named call pickup group features: CHANNEL(callgroup) - Need CHANNEL(named_callgroup) CHANNEL(pickupgroup) - Need CHANNEL(named_pickupgroup) Pickup() - Needs to also select from named pickup groups. | ||
| Comments: | |||